ajout reset css

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,36 @@
+/* reset */
+html, body, div, span,
+h1, h2, h3, h4, h5, h6, p,
+a, img, ol, ul, li,
+footer, header, menu, nav
+{
+    margin: 0;
+    padding: 0;
+    border: 0;
+    font-size: 100%;
+    font-family: sans-serif;
+    vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure,
+footer, header, hgroup, menu, nav, section {
+    display: block;
+}
+body {
+    line-height: 1;
+}
+ol, ul {
+    list-style: none;
+}
+a {
+    text-decoration: none;
+    color: inherit;
+}
+input {
+    -webkit-appearance: none;
+}
+
+/* style de la page */
 html, body {
     height: 100%;
 }
