--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ footer, header, menu, nav {
     padding: 0;
     border: 0;
     font-size: 100%;
-    font-family: sans-serif;
+    font-family: "Source Sans Pro", sans-serif;
     vertical-align: baseline;
 }
 
@@ -91,6 +91,7 @@ form > * {
 
     form {
         flex-direction: row;
+        width: 700px;
     }
 
     form > * {
@@ -101,6 +102,7 @@ form > * {
 
     .email {
         border-radius: 5px 0 0 5px;
+        flex-grow: 1;
     }
 
     .submit {
@@ -110,5 +112,6 @@ form > * {
     .submit svg {
         height: 50px;
         width: 50px;
-
     }
+
+}
